[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["James Collier <james.collier@vib.be>"]

[tool.poetry.dependencies]
python = "^3.9"
Hypercorn = "^0.11.2"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
httpx = "^0.20.0"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
black = "^21.10b0"

[tool.poetry.scripts]
ggwc = 'ggwc:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
