[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["James Collier <james.collier@vib.be>"]

[tool.poetry.dependencies]
python = "^3.9"
Hypercorn = "^0.13.2"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
httpx = "^0.22.0"
fastapi = "^0.78.0"
biopython = "^1.79"
python-multipart = "^0.0.5"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7"
pylint = "^2.11.1"
black = "^22"
mypy = "^0.950"

[tool.poetry.scripts]
ggwc = 'ggwc:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
